# ai_agent_training

./: .env  .gitignore  LICENSE  README.md  analysis.md  pyproject.toml  report.md  temp_data.csv
api/: main.py
output/: code.md  dba.md  excel_file.md  json_file.md  post.md  system_analyst.md  txt_file.md
src/indoprimaflow/: main.py
src/indoprimaflow/crews/analyzer/: analyzer.py
src/indoprimaflow/crews/anomaly_crew/: anomaly_crew.py
src/indoprimaflow/crews/anomaly_crew/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/content_crew/: content_crew.py
src/indoprimaflow/crews/content_crew/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/dev_crew/: dev_crew.py
src/indoprimaflow/crews/dev_crew/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/excel_analyzer/: excel_analyzer.py
src/indoprimaflow/crews/excel_analyzer/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/file_analyzer/: file_analyzer.py
src/indoprimaflow/crews/file_analyzer/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/helmet_detect_crew/: helmet_detect_crew.py
src/indoprimaflow/crews/helmet_detect_crew/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/json_analyzer/: json_analyzer.py
src/indoprimaflow/crews/json_analyzer/config/: agents.yaml  tasks.yaml
src/indoprimaflow/crews/prophet_crew/: prophet_crew.py
src/indoprimaflow/crews/sa_crew/: sa_crew.py
src/indoprimaflow/tools/: helmet_detection_tool.py  prophet_tool.py  save_to_db_tool.py  tool_anomaly.py
tasks/: celery_app.py  celery_task.py
(+4 files in other folders)
